--- a/public/index.html
+++ b/public/index.html
@@ -4,15 +4,15 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Material UI Tutorial Website" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+    <meta name="description" content="Material UI for React" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,700&display=swap" />
     <style>
       * {
         font-family: "Roboto", sans-serif;
         margin: 0;
       }
     </style>
-    <title>Material UI Tutorial Website</title>
+    <title>MUI for React</title>
   </head>
   <body>
     <div id="root"></div>
